--- a/puppeteer-version/package.json
+++ b/puppeteer-version/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "express": "^5.2.1",
     "puppeteer": "^24.36.0",
     "socket.io": "^4.8.3"
